Fixing vertical alignment of ss-icons

--- a/src/less/icon.less
+++ b/src/less/icon.less
@@ -1,8 +1,7 @@
 .icon {
-  font-size: 1rem;
-  line-height: 1rem;
   &:before {
     position: relative;
-    top: 0.25em;
+    vertical-align: middle;
+    top: 0.125em;
   }
 }
