--- a/src/less/typography.less
+++ b/src/less/typography.less
@@ -2,7 +2,7 @@ html,
 body {
   font-family: 'Work Sans', sans-serif;
   color: @fontColor;
-  font-size: 15px;
+  font-size: 14px;
 }
 
 a {
